[package]
name = "snake"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
tempfile = "3"
lalrpop-util = { version = "0.19.6", features = [ "lexer" ] }
regex = "1"
rand = "0.8.4"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19.6"

